# chirp

./: .env.example  .gitignore  Chirp Repository Improvement Analysis.md  Chirp_ Cursor-Optimized Build Plan.md  LICENSE  README.md  main.py  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
backend/: database.py  main.py  mcp_chirp.py  models.py  rate_limit.py  schemas.py  seed.py
backend/engine/: alert_policy.py  assertions.py  context.py  judge_retry.py  llm_judge.py  probes.py  quota_ops.py  runner.py  scheduler.py  slack_delivery.py
backend/observability/: __init__.py  metrics.py
backend/routers/: runs.py  scenarios.py  stream.py
chirp_sdk/: __init__.py  check.py  wrap.py
chirp_sdk/adapters/: __init__.py  autogen.py  crewai.py  langgraph.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/chirp-ui/: ThinkingResponseStream.tsx  index.ts
mock_agent/: main.py
scripts/: install-git-hooks.sh
tests/: conftest.py  test_adapters.py  test_alert_policy.py  test_api_endpoints.py  test_assertions.py  test_chirp_sdk_check.py  test_judge_retry.py  test_llm_judge.py  test_metrics.py  test_quota_ops.py  test_runner.py  test_runner_reliability.py  test_slack_delivery.py  test_wrap.py
