[project]
name = "chirp"
version = "0.1.0"
description = "Quality-aware synthetic monitoring for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    "httpx==0.25.2",
    "anthropic>=0.25.0",
    "apscheduler==3.10.4",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "structlog==23.2.0",
    "python-dotenv==1.0.0",
    "greenlet>=3.5.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-httpx==0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend"]
testpaths = ["tests"]
