[project]
name = "chirp"
version = "0.1.0"
description = "Quality-aware synthetic monitoring for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    "httpx>=0.27.1,<0.29",
    "anthropic>=0.25.0",
    "apscheduler==3.10.4",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.2",
    "structlog==23.2.0",
    "python-dotenv==1.0.0",
    "greenlet>=3.5.0",
    "openai>=1.0.0",
    "mcp>=1.12.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0,<0.36.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend"]
testpaths = ["tests"]
